--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 <head>
 	<meta charset="utf-8">
 	<title>deneme</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
+	<div class="loading">
+			Sayfa Yükleniyor...
+	</div>
 
-	
+	<div class="first">
+		burası class
+	</div>
+	<div id="first">
+		burası id
+	</div>
 
 	<script type="text/javascript" src="assets/js/jquery.min.js"></script>
+	<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 </html>
